--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - pip
   run:
     - python
-    - marshmallow >=3.0.0rc8
+    - marshmallow >=3.0.0
     - numpy
     - python-dateutil >=2.8.0
 
